--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^8.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -20,6 +21,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "react-scroll": "^1.8.9",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   }
